...
        ),
        const SizedBox(height: 8),
        Row(
          children: [
            Expanded(
              child: TextField(
                key: Key('register_firstname_field'),
                controller: controller.firstnameController,
                inputFormatters: [
                  FilteringTextInputFormatter.allow(RegExp(r'[a-zA-Z]')),
                ],
                decoration: InputDecoration(
                  hintText: tr(LocaleKeys.register_first_name),
...
              );
              errorText = controller.usernameError.value;
            }
          }

          return TextField(
            key: Key('register_username_field'),
            controller: controller.usernameController,
            inputFormatters: [
              FilteringTextInputFormatter.deny(RegExp(r'\s')),
            ],
            decoration: InputDecoration(
              hintText: 'ex: JohnDoe.13',
...
