...
                              mainAxisSize: MainAxisSize.min,
                              mainAxisAlignment: MainAxisAlignment.center,
                              crossAxisAlignment: CrossAxisAlignment.stretch,
                              children: [
                                // Masuk dengan Google Button
                                Obx(() => ElevatedButton(
                                      key: Key('login_google_button'),
                                      onPressed: controller.isLoginLoading
                                          ? null
                                          : controller.loginWithGoogle,
                                      style: ElevatedButton.styleFrom(
                                        backgroundColor: AppColors.accent,
                                        foregroundColor: Colors.white,
...
