...
              size: 24,
              color: AppColors.accent,
            ),
            const SizedBox(width: 4),
            Text(
              '$likesCount',
              key: Key('post_like_count_$postId'),
              style: TextStyle(
                color: AppColors.accent,
                fontSize: FontSize.getSize(FontSizeOption.regular),
              ),
            ),
          ],
...
                  ),
                ),
                Container(
                  margin: const EdgeInsets.fromLTRB(0, 0, 0, 12),
                  child: Center(
                    child: Text(
                      'Komentar',
                      style: TextStyle(
                        fontSize: FontSize.getSize(FontSizeOption.medium),
                        fontWeight: FontWeight.bold,
                      ),
                    ),
                  ),
...
